change demo code psot link

--- a/source/code/lineCount.html
+++ b/source/code/lineCount.html
@@ -16,7 +16,7 @@
 改变窗口大小，自动计算
 <button onclick="countLines()">立刻计算</button>
 <h1>相关文章</h1>
-<li><a href="http://chensd.com/2016-06/Material-Design-Float-Action-Button.html">CSS 模拟实现 Material Design 样式的悬浮操作按钮</a></li>
+<li><a href="http://chensd.com/2016-06/Pure-js-get-line-count-of-html-element.html">使用原生 JavaScript 获取文本的行数</a></li>
 
 <script type="text/javascript">
 var target = document.getElementById('target');
