--- a/source/books/index.html
+++ b/source/books/index.html
@@ -60,8 +60,8 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.1.1-rc2/jquery.min.js"></script>
-  <script type="text/javascript" src="http://cdn.staticfile.org/angular.js/1.3.0-beta.13/angular.min.js"></script>
+  <script type="text/javascript" src="//cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="//cdn.bootcss.com/angular.js/1.3.0/angular.min.js"></script>
   <script type="text/javascript" src="./libs/jquery.fullPage.js"></script>
   <script type="text/javascript" src="./libs/angular-fullpage.js"></script>
   <script type="text/javascript" src="./script.js"></script>
