--- a/about/index.html
+++ b/about/index.html
@@ -83,7 +83,7 @@ Chrome 扩展：第二搜索">
   <article id="page">
     
     
-    <h2 id="关于">关于</h2><p>我现在是一名 Node.js 程序员，混迹在手机游戏行业，技术方面主要是Web开发，前后端都稍懂一点。涉及 JavaScript / PHP / Node.js / Express / MongoDB / MySQL / Redis / AngularJS / jQuery / HTML 等。除了技术。业余生活包括电影、看书、 FPS 游戏、音乐和骑车。你可以通过以下方式了解我：</p>
+    <h2 id="关于">关于</h2><p>我现在是一名 Node.js 程序员，混迹在手机游戏行业，技术方面主要是Web开发，前后端都稍懂一点。涉及 JavaScript / Go / PHP / Node.js / Express / Elasticsearch / MongoDB / MySQL / Redis / AngularJS / jQuery / HTML 等。除了技术。业余生活包括电影、看书、 FPS 游戏、音乐和骑车。你可以通过以下方式了解我：</p>
 <ul>
 <li>代码托管：<a href="https://github.com/stiekel" target="_blank" rel="external">Github</a> / <a href="https://coding.net/u/Stiekel" target="_blank" rel="external">Coding.net</a></li>
 <li>我看过的电影：<a href="http://movie.douban.com/people/Stiekel/collect" target="_blank" rel="external">不可能不确定 - 豆瓣</a></li>
