--- a/about/index.html
+++ b/about/index.html
@@ -157,7 +157,7 @@ var duoshuoQuery = {short_name:"SidCN"};
 <div id="user-card">
   <div class="center-field">
     <img class="avatar" src="http://7te9fe.com1.z0.glb.clouddn.com/default_avatar.jpg">
-    <p id="description">不可能不确定的博主是一名Node.js程序员，博客的内容会涉及电影 / 生活 / 吐槽 / JavaScript / PHP / Node.js / Express / MongoDB / MySQL / Redis / AngularJS / jQuery / HTML。</p>
+    <p id="description">不可能不确定的博主是一名Node.js程序员，博客的内容会涉及电影 / 生活 / 吐槽 / JavaScript / Go / PHP / Node.js / Express / Elasticsearch / MongoDB / MySQL / Redis / AngularJS / jQuery / HTML。</p>
     <ul>
     
       <li><a href="https://github.com/stiekel">GitHub</a></li>
