--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
   <meta name="author" content="Stiekel">
   
   
-  <meta name="description" content="关于我现在是一名 Node.js 程序员，混迹在手机游戏行业，技术方面主要是Web开发，前后端都稍懂一点。涉及 JavaScript / PHP / Node.js / Express / MongoDB / MySQL / Redis / AngularJS / jQuery / HTML 等。除了技术。业余生活包括电影、看书、 FPS 游戏、音乐和骑车。你可以通过以下方式了解我：
+  <meta name="description" content="关于我现在是一名 Node.js 程序员，混迹在手机游戏行业，技术方面主要是Web开发，前后端都稍懂一点。涉及 JavaScript / Go / PHP / Node.js / Express / Elasticsearch / MongoDB / MySQL / Redis / AngularJS / jQuery / HTML 等。除了技术。业余生活包括电影、看书、 FPS 游戏、音乐和骑车。你可以通过以下方式了解我：
 
 代码托管：Github / Coding.net
 我看过的电影：不可能不确定 - 豆瓣
