--- a/source/books/index.html
+++ b/source/books/index.html
@@ -62,8 +62,8 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="//cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.bootcss.com/angular.js/1.3.0/angular.min.js"></script>
+    <script type="text/javascript" src="./lib/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="./lib/angular-1.3.9.min.js"></script>
     <script type="text/javascript" src="./libs/jquery.fullPage.js"></script>
     <script type="text/javascript" src="./libs/angular-fullpage.js"></script>
     <script type="text/javascript" src="./script.js"></script>
