feat(books): add loading

--- a/source/books/index.html
+++ b/source/books/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div id="loading">loading...</div>
+    <div class="container-fluid" id="main">
         <ul id="menu">
             <li data-menuanchor="mean"><a>MEAN Web开发</a></li>
             <li data-menuanchor="wince"><a>Windows CE嵌入式系统开发从基础到实践</a></li>
